# WeaR-emu

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: app_icon.rc  create_icon.ps1  resources.qrc
resources/styles/: DeepKernelDark.qss
shaders/: fallback.frag  fallback.vert  framegen.comp
src/: main.cpp
src/Audio/: WeaR_AudioManager.cpp  WeaR_AudioManager.h
src/Core/: WeaR_Cpu.cpp  WeaR_Cpu.h  WeaR_EmulatorCore.cpp  WeaR_EmulatorCore.h  WeaR_InternalBios.h  WeaR_Memory.cpp  WeaR_Memory.h  WeaR_System.cpp  WeaR_System.h
src/GUI/: WeaR_GUI.cpp  WeaR_GUI.h  WeaR_Logger.cpp  WeaR_Logger.h  WeaR_SettingsDialog.cpp  WeaR_SettingsDialog.h  WeaR_Style.h
src/Graphics/: WeaR_RenderEngine.cpp  WeaR_RenderEngine.h  WeaR_RenderQueue.cpp  WeaR_RenderQueue.h  WeaR_ShaderManager.cpp  WeaR_ShaderManager.h  WeaR_VulkanWrapper.h
src/HLE/: WeaR_Syscalls.cpp  WeaR_Syscalls.h
src/HLE/FileSystem/: WeaR_VFS.cpp  WeaR_VFS.h
src/HLE/Graphics/: PM4_Packets.h  WeaR_GnmDriver.cpp  WeaR_GnmDriver.h
src/HLE/Modules/: WeaR_LibAudio.cpp  WeaR_LibFS.cpp  WeaR_LibPad.cpp
src/Hardware/: HardwareDetector.cpp  HardwareDetector.h
src/Input/: WeaR_Input.cpp  WeaR_Input.h
src/Loader/: WeaR_ElfLoader.cpp  WeaR_ElfLoader.h  WeaR_PkgLoader.cpp  WeaR_PkgLoader.h
